# ai-android-liba2f

./: README.md  build.gradle.kts  settings.gradle.kts
libNoetix/: .gitignore  CMakeLists.txt  build.gradle.kts  proguard-android.txt  proguard-rules.pro
libNoetix/src/main/: AndroidManifest.xml
libNoetix/src/main/assets/csv/: high.csv  low.csv  mid.csv
libNoetix/src/main/java/com/azhon/appupdate/manager/: DownloadManager.kt
libNoetix/src/main/java/com/azhon/appupdate/service/: DownloadService.kt
libNoetix/src/main/java/com/azhon/appupdate/util/: ApkUtil.kt  InstallResultReceiver.kt  SystemPackageInstaller.kt
libNoetix/src/main/java/com/azhon/appupdate/view/: NumberProgressBar.java  UpdateDialogActivity.kt
libNoetix/src/main/java/com/noetix/core/: CloudSetting.java
libNoetix/src/main/java/com/noetix/core/api/: ApiManager.kt  HttpTask.kt  Listener.kt  MockData.java  ServerUrl.kt
libNoetix/src/main/java/com/noetix/libnoetix/: AngleReset.kt  Audio2FaceCallback.java  Audio2FaceHandler.java  AudioStreamHandler.kt  BlendShapeHandler.java  BlendShapeOrder.java  Callback.java  Config.java  FaceAnglesHelper.kt  FacialExpressionMap.java  FramePair.java  INativeApi.java  IRobotSDKManager.java  LiveFaceService.java  NativeApiImpl.java  NeckStructure.java  NoetixJNI.java  RobotConfig.java  RobotSDKManagerImpl.java  SDKContext.java  SDKLog.java  TTSHelper.java
libNoetix/src/main/java/com/noetix/utils/: AdbCommandService.kt  AppGlobals.java  ConfigChecker.java  FileUtil.java  IPAddressUtils.java  KLog.java  KeysUtils.kt  P.java  PackageUtils.kt  SerialNumber.kt  TaskExecutors.java  ThreadSchedulerUtil.java  ZipExtractor.kt
libNoetix/src/main/res/drawable/: bg_download.xml
libNoetix/src/main/res/layout/: activity_download.xml
libNoetix/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
libNoetix/src/main/res/values-night/: themes.xml
(+95 files in other folders)
